--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
+    "mysql2": "^3.2.3",
     "pg": "^8.10.0"
   }
 }
