--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@fullcalendar/vue3": "^6.1.8",
     "bcrypt": "^5.1.0",
+    "connect-mysql": "^4.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
