--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.3",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "pg-pool": "^3.6.0"
   }
 }
